--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>秋季之楓</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <p><span class="typed" data-typed-items="読書の,食欲の , スポーツの"></span> 秋</p>
     </div>
   </section><!-- End Hero -->
 
