--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>15</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span></span>oo970901oscar@gmail.com</li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Profession:</strong> <span>Liuhe high school students</span></li>
                 </ul>
               </div>
             </div>
