--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 September 2007</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://mapleleaf20.github.io/index.html</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Department:</strong> <span>資訊科</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>桃園市, 台灣</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>15</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>interest:</strong> <span>動漫素描,看動漫,玩遊戲</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span></span>oo970901oscar@gmail.com</li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Profession:</strong> <span>Liuhe high school students</span></li>
                 </ul>
