--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>15</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>interest:</strong> <span>動漫素描,看動漫,玩遊戲</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Interest:</strong> <span>動漫素描,看動漫,玩遊戲</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span></span>oo970901oscar@gmail.com</li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Profession:</strong> <span>Liuhe high school students</span></li>
                 </ul>
