--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>日本 秋葉原</p>
               </div>
 
               <div class="email">
