--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>113020@s.lhvs.tyc.edu.tw</p>
               </div>
 
               <div class="phone">
