--- a/index.html
+++ b/index.html
@@ -432,8 +432,11 @@
 
 
         <div class="section-title">
-          <h2>很讚的地方</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>秋葉原</h2>
+          <p>
+秋葉原是一條擁有多家電量販店林立的電器街，此外更是結合了熱愛動漫的御宅族文化的一座樂園。在第二次世界大戰後的秋葉原，經常有外國士兵來往此地，因此相當出名。
+大家也習慣將秋葉原簡稱為「Akiba」，這裡距離淺草、上野等觀光地也相當接近。在秋葉原的街道上，有著像女僕咖啡廳這樣獨特風格的店家，以及御宅族文化特有的種類豐富的商品專賣店，這也是秋葉原最為人知的特色。
+秋葉原的特色不只侷限於御宅族文化，這裡有小巧玲瓏的小型家電店舖，也有超過10層樓以上的大型店舖，為數不少的家電量販店開設於此。在結束購物行程後，可以到到寺廟或神社參拜，也能去美術館逛逛，秋葉原周邊有很多魅力無法擋的景點。</p>
         </div>
 
         <div class="row" data-aos="fade-in">
