--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>ポートフォリオ</h2>
+          <p>利益を得るには多大な労力が必要です。彼のニーズは、実際に彼を遠ざける何かから生じます。彼らが望むものにしましょう。誰もが望む誰でも。そして、邪魔する者は他人を受け入れません。彼はここにあるこの便利なオフィスに逃げるべきだからです。</p>
         </div>
 
         <div class="row" data-aos="fade-up">
