--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>履歴書</h2>
+          <p>每一天都是充滿不一樣的歷程的一天</p>
         </div>
 
         <div class="row">
